# vulkan-triangle-intersection

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
02-geometry/02-vulkan/: .clang-format  .gitignore  CMakeLists.txt
02-geometry/02-vulkan/lib/: CMakeLists.txt
02-geometry/02-vulkan/lib/engine/include/: device.hpp  instance.hpp  logging.hpp  memory.hpp  pipeline.hpp  queue_families.hpp  render_pass.hpp  shaders.hpp  surface.hpp  swapchain.hpp  vertex.hpp  window.hpp
02-geometry/02-vulkan/lib/thengine/: CMakeLists.txt
02-geometry/02-vulkan/lib/thengine/include/: engine.hpp  wrappers.hpp
02-geometry/02-vulkan/lib/thengine/include/engine/: device.hpp  queue_families.hpp  render_pass.hpp  surface.hpp  ubo.hpp  window.hpp
02-geometry/02-vulkan/lib/thengine/include/primitives/: ubo.hpp  vertex.hpp
02-geometry/02-vulkan/lib/thengine/include/wrappers/: device.hpp  instance.hpp  logging.hpp  memory.hpp  pipeline.hpp  queue_families.hpp  shaders.hpp  surface.hpp  swapchain.hpp  window.hpp
02-geometry/02-vulkan/lib/thengine/src/engine/: instance.cc  surface.cc
02-geometry/02-vulkan/lib/thengine/src/wrappers/: device.cc  instance.cc  memory.cc  pipeline.cc  queue_families.cc  shaders.cc  surface.cc  window.cc
02-geometry/02-vulkan/lib/triangles/: CMakeLists.txt
02-geometry/02-vulkan/lib/triangles/include/: equal.hpp  point2.hpp  point3.hpp  segment1.hpp  vec2.hpp  vec3.hpp
02-geometry/02-vulkan/lib/triangles/include/broadphase/: broadphase_structure.hpp  bruteforce.hpp  octree.hpp  uniform_grid.hpp
02-geometry/02-vulkan/lib/triangles/include/narrowphase/: aabb.hpp  collision_shape.hpp
02-geometry/02-vulkan/lib/triangles/include/primitives/: line2.hpp  plane.hpp  segment2.hpp  segment3.hpp  triangle2.hpp  triangle3.hpp
02-geometry/02-vulkan/lib/triangles/test/: main.cc  test_aabb.cc  test_equal.cc  test_line2.cc  test_plane.cc  test_point2.cc  test_point3.cc  test_segment1.cc  test_segment2.cc  test_segment3.cc  test_triangle2.cc  test_triangle3.cc  test_vec2.cc  test_vec3.cc
02-geometry/02-vulkan/test/: CMakeLists.txt
02-geometry/02-vulkan/test/include/: application.hpp
02-geometry/02-vulkan/test/shaders/: shader.frag  shader.vert  vertex.spv
app/: application.cc  application.hpp  camera.hpp  config.hpp  ezvk_test.cc  glm_inlcude.hpp  gui.cc  gui.hpp  main.cc  misc.hpp  pipeline.hpp  platform.hpp  triangles.cc  ubo.hpp  vertex.hpp
app/misc/: ubo.hpp  utility.hpp  vertex.hpp
include/: camera.hpp  engine.hpp  glfw_include.hpp  keyboard_handler.hpp  utils.hpp  vulkan_include.hpp  wrappers.hpp
include/app/app/: camera.hpp  gui.hpp  keyboard_handler.hpp
include/ezvk/: debug.hpp  debugged_instance.hpp  depth_buffer.hpp  descriptor_set.hpp  device.hpp  error.hpp  image.hpp  instance.hpp  memory.hpp  queues.hpp  renderpass.hpp  shaders.hpp  swapchain.hpp  utils.hpp  window.hpp
include/ezvk/ezvk/: debug.hpp  debugged_instance.hpp  depth_buffer.hpp  descriptor_set.hpp  device.hpp  image.hpp  instance.hpp  memory.hpp  queues.hpp  renderpass.hpp  shaders.hpp  window.hpp
include/ezvk/ezvk/utils/: algorithm.hpp  utility.hpp
include/ezvk/ezvk/wrappers/: debugged_instance.hpp  depth_buffer.hpp  descriptor_set.hpp  device.hpp  image.hpp  instance.hpp  memory.hpp  queues.hpp  renderpass.hpp  shaders.hpp  swapchain.hpp
include/primitives/: vertex.hpp
include/unified_includes/unified_includes/: glm_inlcude.hpp  vulkan_hpp_include.hpp
include/wrappers/: device.hpp  instance.hpp  logging.hpp  memory.hpp  pipeline.hpp  queue_families.hpp  shaders.hpp  swapchain.hpp  texture.hpp
lib/: CMakeLists.txt
lib/thengine/: CMakeLists.txt
lib/thengine/include/wrappers/: images.hpp  memory.hpp  surface.hpp  window.hpp
lib/thengine/src/wrappers/: device.cc  logging.cc  queue_families.cc  shaders.cc
shaders/: shader.frag  shader.vert  triangles.frag  triangles.vert  vertex.spv  wireframe.vert
src/: device.cc  instance.cc  pipeline.cc  shaders.cc  surface.cc  swapchain.cc  window.cc
src/ezvk/: window.cc
test/: CMakeLists.txt
test/shaders/: shader.frag  shader.vert
